trunk/Archive2/9f/16224dec1defd1/output
main.cpp: In function 'int main()':
main.cpp:17:22: warning: format '%f' expects a matching 'double' argument [-Wformat=]
   printf ("y es: %f" );
                      ^
main.cpp:9:9: warning: variable 'y' set but not used [-Wunused-but-set-variable]
   float y=0;
         ^
main.cpp: In function 'int main()':
main.cpp:22:5: error: redefinition of 'int main()'
 int main (void)
     ^
main.cpp:3:5: note: 'int main()' previously defined here
 int main (void)
     ^
main.cpp:24:9: warning: unused variable 'perimetro' [-Wunused-variable]
   float perimetro=0;
         ^
